--- a/portfolio/src/App.css
+++ b/portfolio/src/App.css
@@ -117,22 +117,83 @@ body {
 
 .tecnologias {
   width: 100%;
-  height: 300px;
+  height: 200px;
   padding-left: 150px;
   display: block;
-  float: left;
   color: orange;
   text-shadow: 3px 3px 3px orange;
+  padding-right: 100px;
 }
 
+/*AÑADIENDO ANIMACIONES*/
+
 .wrapper {
+  width: 100%;
+  margin-inline: auto;
+  position: relative;
+  height: 100px;
+  overflow: hidden;
+  mask-image: linear-gradient(
+    to right,
+    rgba(0, 0, 0, 0),
+    rgba(0, 0, 0, 1) 20%,
+    rgba(0, 0, 0, 1) 80%,
+    rgba(0, 0, 0, 0)
+  );
 }
 
 .Iconos {
-  width: 90px;
+  height: 100px;
+  width: 200px;
   padding-top: 20px;
   padding-left: 30px;
+  position: absolute;
+  left: 1000px;
+
+  animation: scrollleft;
+  animation-duration: 30s;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
 }
+
+@keyframes scrollleft {
+  to {
+    left: -90px;
+  }
+}
+
+.Icono1 {
+  animation-delay: -3s;
+}
+.Icono2 {
+  animation-delay: -6s;
+}
+.Icono3 {
+  animation-delay: -9s;
+}
+.Icono4 {
+  animation-delay: -12s;
+}
+.Icono5 {
+  animation-delay: -15s;
+}
+.Icono6 {
+  animation-delay: -18s;
+}
+.Icono7 {
+  animation-delay: -21s;
+}
+.Icono8 {
+  animation-delay: -24s;
+}
+.Icono9 {
+  animation-delay: -27s;
+}
+.Icono10 {
+  animation-delay: -30s;
+}
+
+/*TERMINANDO ANIMACIONES*/
 
 .comentarios {
   width: 100%;
@@ -210,6 +271,7 @@ body {
   .proyectos,
   .tecnologias {
     padding-left: 0px;
+    padding-right: 0%;
   }
   .card-img {
     height: 60px;
@@ -279,5 +341,38 @@ body {
   .formulario {
     width: 100%;
     height: 40px;
+  }
+  .Iconos {
+    animation-duration: 20s;
+  }
+  .Icono1 {
+    animation-delay: -2s;
+  }
+  .Icono2 {
+    animation-delay: -4s;
+  }
+  .Icono3 {
+    animation-delay: -6s;
+  }
+  .Icono4 {
+    animation-delay: -8s;
+  }
+  .Icono5 {
+    animation-delay: -10s;
+  }
+  .Icono6 {
+    animation-delay: -12s;
+  }
+  .Icono7 {
+    animation-delay: -14s;
+  }
+  .Icono8 {
+    animation-delay: -16s;
+  }
+  .Icono9 {
+    animation-delay: -18s;
+  }
+  .Icono10 {
+    animation-delay: -20s;
   }
 }
