--- a/portfolio/src/App.css
+++ b/portfolio/src/App.css
@@ -131,7 +131,7 @@ body {
   width: 100%;
   margin-inline: auto;
   position: relative;
-  height: 100px;
+  height: 100%;
   overflow: hidden;
   mask-image: linear-gradient(
     to right,
@@ -143,8 +143,7 @@ body {
 }
 
 .Iconos {
-  height: 100px;
-  width: 200px;
+  height: 120px;
   padding-top: 20px;
   padding-left: 30px;
   position: absolute;
@@ -346,7 +345,6 @@ body {
     height: 40px;
   }
   .Iconos {
-    width: 500px;
     animation-duration: 20s;
   }
   .Icono1 {
