--- a/portfolio/src/App.css
+++ b/portfolio/src/App.css
@@ -108,21 +108,70 @@ body {
 
 .proyectos {
   width: 100%;
+  clear: both;
+  display: block;
+}
+
+.proyectos h1 {
   padding-left: 150px;
   color: orange;
   text-shadow: 3px 3px 3px orange;
-  height: 400px;
   clear: both;
+}
+
+.cajaProyectos {
+  width: 45%;
+  height: 300px;
+  background-color: white;
+  border-radius: 5px 5px 5px 5px;
+  display: inline-block;
+  margin: 25px;
+}
+
+.cajaProyectos a {
+  text-decoration: none;
+}
+
+.tituloProyectos {
+  width: 100%;
+  color: black;
+  text-shadow: none;
+  font-size: 30px;
+  clear: both;
+  text-align: center;
+  margin: 0px;
+}
+
+.cajaimagen {
+  width: 50%;
+  height: 255px;
+  display: block;
+  float: left;
+}
+
+.imagenProyectos {
+  width: 100%;
+  height: 100%;
+}
+.descripcionProyecto {
+  color: black;
+  text-shadow: none;
+  height: 255px;
+  width: 50%;
+  display: block;
+  float: right;
+  text-align: left;
 }
 
 .tecnologias {
   width: 100%;
-  height: 200px;
+  height: 350px;
   padding-left: 150px;
   display: block;
   color: orange;
   text-shadow: 3px 3px 3px orange;
   padding-right: 100px;
+  padding-top: 80px;
 }
 
 /*AÑADIENDO ANIMACIONES*/
@@ -259,8 +308,6 @@ body {
   width: 5%;
 }
 
-/* RESPONSIVE */
-
 @media (max-width: 1160px) {
   .card,
   .card-body,
@@ -268,6 +315,7 @@ body {
   .card-text,
   .detalle,
   .proyectos,
+  .proyectos h1,
   .tecnologias {
     padding-left: 0px;
     padding-right: 0%;
@@ -275,6 +323,9 @@ body {
   .card-img {
     height: 60px;
     width: 10%;
+  }
+  .cajaProyectos {
+    margin: 20px;
   }
 }
 
@@ -289,6 +340,9 @@ body {
   .card-img {
     height: 50px;
     width: 10%;
+  }
+  .cajaProyectos {
+    margin: 15px;
   }
 }
 
@@ -330,9 +384,14 @@ body {
     text-align: center;
     clear: none;
   }
+  .cajaProyectos {
+    margin: 15px;
+    width: 90%;
+  }
 
   .detalle,
   .proyectos,
+  .proyectos h1,
   .tecnologias,
   .comentarios {
     width: 100%;
