--- a/portfolio/src/Components/Tecnologias/styles.module.css
+++ b/portfolio/src/Components/Tecnologias/styles.module.css
@@ -1,21 +1,17 @@
 .tecnologias {
   width: 80%;
-  height: 350px;
   margin: 50px;
+  margin-top: 100px;
   margin-left: 200px;
+  margin-bottom: 100px;
   padding: 50px;
-  display: block;
-  float: left;
+  display: flex;
+  flex-direction: column;
   color: #008080;
   font-weight: bold;
   border-radius: 40px;
   box-shadow: 1px 1px 10px 1px white;
-}
-
-.titulos {
-  display: flex;
-  justify-content: space-between;
-  width: 100%;
+  position: relative;
 }
 
 .titulo {
@@ -24,20 +20,10 @@
   font-weight: bold;
   display: block;
 }
-.modo {
-  width: 5vw;
-}
-
-.block {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-}
-
-/*AÑADIENDO ANIMACIONES*/
 
 .wrapper {
-  width: 100%;
-  height: 229px;
+  width: 70vw;
+  min-height: 200px;
   display: block;
   margin-inline: auto;
   position: relative;
@@ -50,6 +36,33 @@
     rgba(0, 0, 0, 0)
   );
 }
+
+.modo {
+  width: 70vw;
+  display: block;
+  bottom: 0;
+}
+
+.block {
+  display: grid;
+  border-radius: 20px;
+  grid-template-columns: 1fr;
+}
+.block:hover {
+  scale: 1.1;
+  translate: 1.4px;
+  background-color: #008080;
+  color: white;
+  font-weight: bold;
+}
+
+.agrupar {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
+  justify-content: center;
+}
+/*AÑADIENDO ANIMACIONES*/
 
 .Iconos {
   margin-top: 30px;
@@ -67,6 +80,7 @@
 
 .Icono {
   height: 90px;
+  width: 90px;
 }
 .Iconos:hover {
   scale: 1.1;
@@ -82,6 +96,7 @@
 
 .nombreIcono {
   font-size: 15px;
+  width: 90px;
   text-align: center;
   font-weight: bold;
 }
